kubernetes/deploy1.yaml
apiVersion: v1 
kind: Pod 
metadata: 
 name: aplicacao-nginx 
spec:
        containers: 
          - name: container-aplicacao-nginx
            image: nginx 
            ports: 
             - containerPort: 80
