kubernetes/ingress.yaml
apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
        name: test-ingress
spec:
        backend:
                serviceName: testsvc
                servicePort: 80
